After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791323 - GWeatherLocation: Warn when coordinates couldn't be parsed
GWeatherLocation: Warn when coordinates couldn't be parsed
Status: RESOLVED FIXED
Product: libgweather
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: future
Assigned To: libgweather-maint
libgweather-maint
Depends on:
Blocks:
 
 
Reported: 2017-12-06 20:39 UTC by Bastien Nocera
Modified: 2017-12-07 00:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GWeatherLocation: Warn when coordinates couldn't be parsed (1012 bytes, patch)
2017-12-06 20:39 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-12-06 20:39:11 UTC
.
Comment 1 Bastien Nocera 2017-12-06 20:39:15 UTC
Created attachment 365159 [details] [review]
GWeatherLocation: Warn when coordinates couldn't be parsed

So that those can be fixed.
Comment 2 Bastien Nocera 2017-12-07 00:33:11 UTC
Attachment 365159 [details] pushed as 93c26a6 - GWeatherLocation: Warn when coordinates couldn't be parsed