GWeatherLocation: Warn when coordinates couldn't be parsed

So that those can be fixed.

https://bugzilla.gnome.org/show_bug.cgi?id=791323